# LMSB

./: .env  .env.example  CNAME  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  tailwind.config.ts
backend/: CMakeLists.txt  README.md  setup.sh
backend/include/database/: db_connection.h
backend/include/models/: book.h  borrow.h  member.h
backend/include/routes/: books_routes.h  borrowing_routes.h  members_routes.h  reports_routes.h  settings_routes.h
backend/sql/: schema.sql
backend/src/: main.cpp
backend/src/database/: db_connection.cpp
backend/src/models/: book.cpp  borrow.cpp  member.cpp
backend/src/routes/: books_routes.cpp  borrowing_routes.cpp  members_routes.cpp  reports_routes.cpp  settings_routes.cpp
client/: App.tsx  global.css
client/components/: Layout.tsx
client/pages/: Books.tsx  Borrowing.tsx  Documentation.tsx  Index.tsx  Libraries.tsx  Members.tsx  NotFound.tsx  Reports.tsx  Settings.tsx
shared/: api.ts
